fix overflow

--- a/resource/styles/style.scss
+++ b/resource/styles/style.scss
@@ -162,7 +162,7 @@ body{
                 @media (max-width: 575.98px) {
                     margin-top: 0;
                     img {
-                        margin-top: -10vh;
+                        margin-top: 10vh;
                     }
                 }
                 .text-header {
@@ -187,6 +187,7 @@ body{
                 }
             }
         }
+
         .testimonial {
             margin-top: 20vh !important;
             margin-bottom: 5vh;
